--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@ Un diseñador gráfico es un profesional que comunica un mensaje de forma visual
     </div>
     <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
       <img class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full"
-        src="https://scontent.flim14-1.fna.fbcdn.net/v/t39.30808-6/314422678_102268929370786_933281793514611941_n.jpg?_nc_cat=104&cb=99be929b-b574a898&ccb=1-7&_nc_sid=5f2048&_nc_ohc=DsD2Hin-EzAAX8gjaeH&_nc_ht=scontent.flim14-1.fna&oh=00_AfDWgRUl6nK2MXA3_cofluGbzL-sXNkS_ymh7fZRGw5hJQ&oe=65F1FC8D" alt="">
+        src="https://static.wikia.nocookie.net/wadguia/images/a/ab/D4_Doom_Slayer.jpg/revision/latest/scale-to-width-down/1000?cb=20171206233449" alt="">
     </div>
   </div>
   <div class="bg-white">
